# Cruft-Guard

./: .gitignore  CONTEXT.md  DEMO.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cruft_guard/: cli.py  core.py
demo/: fix_with_cruft_guard.py  reset.sh  run_demo.sh  setup.sh
demo/instance/: .cruft.json  README.md  app.py
demo/template/: cookiecutter.json
demo/template/{{cookiecutter.project_name}}/: README.md  app.py
tests/: test_core.py
